# rinha-2024-rust

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: config.rs  db.rs  errors.rs  main.rs  server.rs
