[package]
name = "rinha-servico-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.6.0"
actix-web = "4.5.0"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.11.2"
sqlx = {version = "0.7.3", features = ["chrono", "runtime-tokio", "postgres", "time"]}
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
